# potopoto

./: .gitmodules  CMakeLists.txt  README.md
src/: AdjustmentsParameters.h  BackgroundTask.h  BlurFilterParameters.h  CMakeLists.txt  IImageProcessingParameters.h  Image.cpp  Image.h  ImageAdjustmentsParameters.h  ImageApplyAdjustmentsTask.cpp  ImageApplyAdjustmentsTask.h  ImageEditor.cpp  ImageEditor.h  ImageHistogram.cpp  ImageHistogram.h  ImageLoader.cpp  ImageLoader.h  ImagePreview.cpp  ImagePreview.h  ImagePreview2.cpp  ImagePreview2.h  ImageReader.cpp  ImageReader.h  ImageUtils.cpp  ImageUtils.h  LayerBase.h  LayerBrightness.cpp  LayerBrightness.h  LayerBrightnessContrast.cpp  LayerBrightnessContrast.h  LayerCmyk.cpp  LayerCmyk.h  LayerContrast.cpp  LayerContrast.h  LayerGamma.cpp  LayerGamma.h  LayerHighlight.cpp  LayerHighlight.h  LayerHue.cpp  LayerHue.h  LayerHueSaturationValue.cpp  (+21 more)
src/ui/: AbstractFilterPanel.cpp  AbstractFilterPanel.h  BlurFilterPanel.cpp  BlurFilterPanel.h  Canvas.cpp  Canvas.h  Enums.h  ExifMetadata.cpp  ExifMetadata.h  FileInfo.cpp  FileInfo.h  FilterAdjustmentsPanel.cpp  FilterAdjustmentsPanel.h  Histogram.cpp  Histogram.h  HistogramCanvas.cpp  HistogramCanvas.h  IImageProcessingPanel.h  ImageAdjustments.cpp  ImageAdjustments.h  ImageAdjustmentsPanel.cpp  ImageAdjustmentsPanel.h  ImageAnalysisPanel.cpp  ImageAnalysisPanel.h  ImageCanvas.cpp  ImageCanvas.h  ImageEditor.cpp  ImageEditor.h  ImageEditor2.cpp  ImageEditor2.h  ImageInfo.cpp  ImageInfo.h  LayerAdjustmentsPanel.cpp  LayerAdjustmentsPanel.h  MainFrame.cpp  MainFrame.h  Menubar.cpp  Menubar.h  TableDataPanel.cpp  TableDataPanel.h  (+4 more)
